--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,8 @@
         "drupal/core-composer-scaffold": "^10.1",
         "drupal/core-project-message": "^10.1",
         "drupal/core-recommended": "^10.1",
+        "drupal/gin": "^3.0@RC",
+        "drupal/gin_toolbar": "^1.0@RC",
         "drush/drush": "^12.2"
     },
     "conflict": {
