--- a/config/prod/core.extension.yml
+++ b/config/prod/core.extension.yml
@@ -20,6 +20,7 @@ module:
   field_ui: 0
   file: 0
   filter: 0
+  gin_toolbar: 0
   help: 0
   history: 0
   image: 0
@@ -52,4 +53,5 @@ module:
 theme:
   olivero: 0
   claro: 0
+  gin: 0
 profile: standard
