config: Added support to install Drupal site using existing configuration.

--- a/config/prod/core.extension.yml
+++ b/config/prod/core.extension.yml
@@ -51,9 +51,9 @@ module:
   views_ui: 0
   workflows: 0
   views: 10
-  standard: 1000
+  minimal: 1000
 theme:
   olivero: 0
   claro: 0
   gin: 0
-profile: standard
+profile: minimal
