--- a/config/prod/system.site.yml
+++ b/config/prod/system.site.yml
@@ -2,8 +2,8 @@ _core:
   default_config_hash: VDJxTZtQR21qB4lvOq8zszJZLvLKrSPQpdn2E3T71Ww
 langcode: en
 uuid: 2619c649-0d35-4a36-ae78-17d25ff197e2
-name: notes.taher.pro
-mail: admin@taher.pro
+name: Start Drupal
+mail: sample@example.com
 slogan: ''
 page:
   403: ''
