--- a/config/prod/system.site.yml
+++ b/config/prod/system.site.yml
@@ -2,7 +2,7 @@ _core:
   default_config_hash: VDJxTZtQR21qB4lvOq8zszJZLvLKrSPQpdn2E3T71Ww
 langcode: en
 uuid: 2619c649-0d35-4a36-ae78-17d25ff197e2
-name: Start Drupal
+name: 'Start Drupal'
 mail: sample@example.com
 slogan: ''
 page:
@@ -12,3 +12,4 @@ page:
 admin_compact_mode: false
 weight_select_max: 100
 default_langcode: en
+mail_notification: null
